# LanKvmPy

./: .gitignore  README.md  config.sample.toml  main.py  print-peer-launch.py  pyproject.toml
lan_kvm_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lankvm/: app.py  cli.py  config.py  events.py  preset.py  protocol.py  screen.py  state.py  transport.py
lankvm/windows/: __init__.py  backend.py  win32.py
tests/: test_config.py  test_preset.py  test_protocol.py  test_screen.py  test_state.py
